Update New Year card: remove flowers, enlarge gift box, add fireworks, improve responsiveness, and fix wish jar stacking

--- a/index.html
+++ b/index.html
@@ -19,19 +19,15 @@
     <!-- Initial Popup -->
     <div class="initial-popup" id="initialPopup">
         <div class="popup-content">
-            <div class="flower-circle">
-                <div class="flower f1">🌸</div>
-                <div class="flower f2">🌺</div>
-                <div class="flower f3">🌻</div>
-                <div class="flower f4">🌷</div>
-                <div class="flower f5">🌹</div>
-                <div class="flower f6">🌼</div>
-                <div class="flower f7">💐</div>
-                <div class="flower f8">🌸</div>
-                <div class="flower f9">🌺</div>
-                <div class="flower f10">🌻</div>
-                <div class="flower f11">🌷</div>
-                <div class="flower f12">🌹</div>
+            <div class="popup-fireworks">
+                <div class="popup-spark spark-1">✨</div>
+                <div class="popup-spark spark-2">💥</div>
+                <div class="popup-spark spark-3">⭐</div>
+                <div class="popup-spark spark-4">✨</div>
+                <div class="popup-spark spark-5">💫</div>
+                <div class="popup-spark spark-6">✨</div>
+                <div class="popup-spark spark-7">🎆</div>
+                <div class="popup-spark spark-8">✨</div>
             </div>
             <div class="gift-circle" id="openCardBtn">
                 <div class="circle-glow"></div>
@@ -108,7 +104,7 @@
 
             <!-- Scroll Indicator -->
             <div class="scroll-indicator" id="scrollIndicator">
-                <div class="scroll-text">Scroll</div>
+                <div class="scroll-text">Click me</div>
                 <div class="scroll-arrow">↓</div>
             </div>
 
