Enhance scroll indicator

--- a/index.html
+++ b/index.html
@@ -104,12 +104,16 @@
 
             <!-- Scroll Indicator -->
             <div class="scroll-indicator" id="scrollIndicator">
-                <div class="scroll-text">Click me</div>
-                <div class="scroll-arrow">↓</div>
+                <div class="scroll-arrow-animated">
+                    <span>↓</span>
+                    <span>↓</span>
+                    <span>↓</span>
+                </div>
+                <div class="scroll-hint">Scroll to explore</div>
             </div>
 
-            <!-- Hidden Content Below -->
-            <div class="hidden-content" id="hiddenContent">
+            <!-- Content Below -->
+            <div class="scroll-content" id="scrollContent">
             <!-- Message -->
             <div class="surprise-message-display">
                 <p class="surprise-text">🌟 May your dreams soar higher than ever before! 🌟</p>
@@ -173,7 +177,7 @@
                 </button>
             </div>
             </div>
-            <!-- End Hidden Content -->
+            <!-- End Scroll Content -->
         </div>
 
         <!-- Music Control -->
